# naivestreaming

./: .gitignore  .gitmodules  CMakeLists.txt  IDEAS.mdown  README.mdown  RESOURCES.mdown  decoder.cpp  decoder.hpp  encoder.cpp  encoder.hpp  log.hpp  naive_streaming.cpp  stun_client.cpp  types.hpp  udp_receive.cpp  udp_receive.hpp  udp_transmit.cpp  video_capture.cpp
src/libns/: CMakeLists.txt  decoder.cpp  decoder.hpp  defs.hpp  encoder.cpp  encoder.hpp  log.cpp  log.hpp  rtp.cpp  rtp.hpp  stun_client.hpp  types.cpp  types.hpp  udp_receive.cpp  udp_transmit.cpp  udp_transmit.hpp  video_capture.cpp  video_capture.hpp
src/libns/tests/: rtp_tests.cpp
src/stream_receive/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  stream_receive_main.cpp
src/stream_transmit/: CMakeLists.txt  stream_transmit_main.cpp
src/streamrender/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
